fix possible bug with z-index

--- a/sass/_header.sass
+++ b/sass/_header.sass
@@ -187,14 +187,14 @@
 	width: 100%
 	height: 100%
 	background: rgba(#000, .7)    
-	z-index: 1000 
+	z-index: 2000 
 .sorry
 	position: fixed
 	top: 0 
 	left: 0
 	right: 0
 	background: #fff   
-	z-index: 1001
+	z-index: 2001
 	padding: 20px 20px 35px 20px
 	color: #07386F
 	font-size: 14px  
